--- a/subclass_experiment/Train.ipynb
+++ b/subclass_experiment/Train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,18 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -112,12 +103,13 @@
    ],
    "source": [
     "# Importing the Keras libraries and packages\n",
-    "from keras.models import Sequential\n",
+    "from keras.models import Sequential,save_model,load_model\n",
     "from keras.layers import Conv2D\n",
     "from keras.layers import MaxPooling2D\n",
     "from keras.layers import Flatten\n",
     "from keras.layers.core import Dense, Dropout\n",
-    "\n",
+    "from keras.applications import VGG16,Xception,ResNet50,nasnet\n",
+    "from keras.callbacks import ModelCheckpoint,EarlyStopping, TensorBoard\n",
     "\n",
     "# Initialising the CNN\n",
     "classifier = Sequential()\n",
@@ -153,18 +145,7 @@
      "text": [
       "Found 8751 images belonging to 5 classes.\n",
       "Found 3753 images belonging to 5 classes.\n",
-      "Epoch 1/15\n",
-      "391/390 [==============================] - 132s 337ms/step - loss: 1.4814 - acc: 0.3695 - val_loss: 1.3684 - val_acc: 0.4688\n",
-      "Epoch 2/15\n",
-      "391/390 [==============================] - 48s 122ms/step - loss: 1.3247 - acc: 0.4657 - val_loss: 1.1535 - val_acc: 0.5375\n",
-      "Epoch 3/15\n",
-      "391/390 [==============================] - 41s 106ms/step - loss: 1.1840 - acc: 0.5360 - val_loss: 0.9817 - val_acc: 0.6573\n",
-      "Epoch 4/15\n",
-      "391/390 [==============================] - 40s 103ms/step - loss: 1.0896 - acc: 0.5845 - val_loss: 0.9705 - val_acc: 0.6467\n",
-      "Epoch 5/15\n",
-      "391/390 [==============================] - 37s 95ms/step - loss: 1.0091 - acc: 0.6143 - val_loss: 0.8235 - val_acc: 0.7000\n",
-      "Epoch 6/15\n",
-      "381/390 [============================>.] - ETA: 0s - loss: 0.9938 - acc: 0.6222"
+      "Epoch 1/15\n"
      ]
     }
    ],
@@ -173,12 +154,7 @@
     "# Part 2 - Fitting the CNN to the images\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
-    "train_datagen = ImageDataGenerator(rescale = 1./255, \n",
-    "                                   horizontal_flip=True,\n",
-    "                                   width_shift_range= 0.3,\n",
-    "                                   height_shift_range=0.2,\n",
-    "                                   shear_range=0.2,\n",
-    "                                   zoom_range=0.2)\n",
+    "train_datagen = ImageDataGenerator(rescale = 1./255 )\n",
     "\n",
     "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "\n",
@@ -192,10 +168,17 @@
     "                                            batch_size = 32,\n",
     "                                            class_mode = 'categorical')\n",
     "\n",
+    "tensorboard=[TensorBoard(log_dir='logs/', histogram_freq=0, batch_size=32, write_graph=True, \n",
+    "                      write_grads=False, write_images=False, embeddings_freq=0, embeddings_layer_names=None, \n",
+    "                      embeddings_metadata=None)]\n",
+    "\n",
+    "checkpointer = ModelCheckpoint(filepath='output_models', verbose=1, save_best_only=True)\n",
+    "\n",
     "classifier.fit_generator(training_set,steps_per_epoch = 12500/32,\n",
     "                         epochs = 15,\n",
     "                         validation_data = test_set,\n",
-    "                         validation_steps = 30)"
+    "                         validation_steps = 30,\n",
+    "                         callbacks =tensorboard)"
    ]
   },
   {
