--- a/subclass_experiment/Train.ipynb
+++ b/subclass_experiment/Train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,23 +76,23 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 62, 62, 32)        896       \n",
+      "conv2d_3 (Conv2D)            (None, 62, 62, 32)        896       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 31, 31, 32)        0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 31, 31, 32)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 31, 31, 32)        0         \n",
+      "dropout_3 (Dropout)          (None, 31, 31, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 29, 29, 32)        9248      \n",
+      "conv2d_4 (Conv2D)            (None, 29, 29, 32)        9248      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 14, 14, 32)        0         \n",
+      "dropout_4 (Dropout)          (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 6272)              0         \n",
+      "flatten_2 (Flatten)          (None, 6272)              0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 128)               802944    \n",
+      "dense_3 (Dense)              (None, 128)               802944    \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 5)                 645       \n",
+      "dense_4 (Dense)              (None, 5)                 645       \n",
       "=================================================================\n",
       "Total params: 813,733\n",
       "Trainable params: 813,733\n",
@@ -145,7 +145,58 @@
      "text": [
       "Found 8751 images belonging to 5 classes.\n",
       "Found 3753 images belonging to 5 classes.\n",
-      "Epoch 1/15\n"
+      "Epoch 1/30\n",
+      "500/500 [==============================] - 52s 104ms/step - loss: 1.3574 - acc: 0.4741 - val_loss: 0.8387 - val_acc: 0.7031\n",
+      "Epoch 2/30\n",
+      "500/500 [==============================] - 51s 102ms/step - loss: 1.0142 - acc: 0.6198 - val_loss: 0.7693 - val_acc: 0.7073\n",
+      "Epoch 3/30\n",
+      "500/500 [==============================] - 51s 102ms/step - loss: 0.9248 - acc: 0.6527 - val_loss: 0.6808 - val_acc: 0.7438\n",
+      "Epoch 4/30\n",
+      "500/500 [==============================] - 51s 101ms/step - loss: 0.8709 - acc: 0.6718 - val_loss: 0.6277 - val_acc: 0.7673\n",
+      "Epoch 5/30\n",
+      "500/500 [==============================] - 51s 102ms/step - loss: 0.8360 - acc: 0.6887 - val_loss: 0.5930 - val_acc: 0.7812\n",
+      "Epoch 6/30\n",
+      "500/500 [==============================] - 80s 160ms/step - loss: 0.7958 - acc: 0.7061 - val_loss: 0.6925 - val_acc: 0.7542\n",
+      "Epoch 7/30\n",
+      "500/500 [==============================] - 85s 170ms/step - loss: 0.7685 - acc: 0.7127 - val_loss: 0.6324 - val_acc: 0.7646\n",
+      "Epoch 8/30\n",
+      "500/500 [==============================] - 81s 162ms/step - loss: 0.7488 - acc: 0.7299 - val_loss: 0.5824 - val_acc: 0.7855\n",
+      "Epoch 9/30\n",
+      "500/500 [==============================] - 81s 162ms/step - loss: 0.7261 - acc: 0.7355 - val_loss: 0.6274 - val_acc: 0.7635\n",
+      "Epoch 10/30\n",
+      "500/500 [==============================] - 84s 168ms/step - loss: 0.7106 - acc: 0.7401 - val_loss: 0.6316 - val_acc: 0.7792\n",
+      "Epoch 11/30\n",
+      "500/500 [==============================] - 84s 169ms/step - loss: 0.6989 - acc: 0.7496 - val_loss: 0.5552 - val_acc: 0.7937\n",
+      "Epoch 12/30\n",
+      "500/500 [==============================] - 83s 166ms/step - loss: 0.6773 - acc: 0.7491 - val_loss: 0.5707 - val_acc: 0.7812\n",
+      "Epoch 13/30\n",
+      "500/500 [==============================] - 84s 168ms/step - loss: 0.6566 - acc: 0.7596 - val_loss: 0.5725 - val_acc: 0.7812\n",
+      "Epoch 14/30\n",
+      "500/500 [==============================] - 84s 168ms/step - loss: 0.6495 - acc: 0.7613 - val_loss: 0.6408 - val_acc: 0.7771\n",
+      "Epoch 15/30\n",
+      "500/500 [==============================] - 84s 167ms/step - loss: 0.6407 - acc: 0.7657 - val_loss: 0.5564 - val_acc: 0.7969\n",
+      "Epoch 16/30\n",
+      "500/500 [==============================] - 84s 169ms/step - loss: 0.6370 - acc: 0.7662 - val_loss: 0.5644 - val_acc: 0.8015\n",
+      "Epoch 17/30\n",
+      "500/500 [==============================] - 82s 164ms/step - loss: 0.6208 - acc: 0.7723 - val_loss: 0.5120 - val_acc: 0.8094\n",
+      "Epoch 18/30\n",
+      "500/500 [==============================] - 83s 167ms/step - loss: 0.6182 - acc: 0.7686 - val_loss: 0.5126 - val_acc: 0.8125\n",
+      "Epoch 19/30\n",
+      "500/500 [==============================] - 84s 169ms/step - loss: 0.6090 - acc: 0.7806 - val_loss: 0.5160 - val_acc: 0.8104\n",
+      "Epoch 20/30\n",
+      "500/500 [==============================] - 85s 170ms/step - loss: 0.5944 - acc: 0.7851 - val_loss: 0.5944 - val_acc: 0.7919\n",
+      "Epoch 21/30\n",
+      "500/500 [==============================] - 68s 136ms/step - loss: 0.5803 - acc: 0.7881 - val_loss: 0.4942 - val_acc: 0.8198\n",
+      "Epoch 22/30\n",
+      "500/500 [==============================] - 51s 101ms/step - loss: 0.5849 - acc: 0.7867 - val_loss: 0.6238 - val_acc: 0.7760\n",
+      "Epoch 23/30\n",
+      "500/500 [==============================] - 51s 101ms/step - loss: 0.5892 - acc: 0.7827 - val_loss: 0.4972 - val_acc: 0.8125\n",
+      "Epoch 24/30\n",
+      "500/500 [==============================] - 51s 102ms/step - loss: 0.5991 - acc: 0.7793 - val_loss: 0.4963 - val_acc: 0.8218\n",
+      "Epoch 25/30\n",
+      "500/500 [==============================] - 50s 101ms/step - loss: 0.5667 - acc: 0.7962 - val_loss: 0.5766 - val_acc: 0.7958\n",
+      "Epoch 26/30\n",
+      "175/500 [=========>....................] - ETA: 30s - loss: 0.5667 - acc: 0.7956"
      ]
     }
    ],
@@ -154,7 +205,12 @@
     "# Part 2 - Fitting the CNN to the images\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
-    "train_datagen = ImageDataGenerator(rescale = 1./255 )\n",
+    "train_datagen = ImageDataGenerator(rescale = 1./255,\n",
+    "                                   horizontal_flip=True,\n",
+    "                                   rotation_range = 0.2,\n",
+    "                                   zoom_range = 0.2,\n",
+    "                                   width_shift_range = 0.2,\n",
+    "                                   height_shift_range = 0.2,)\n",
     "\n",
     "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "\n",
@@ -174,8 +230,8 @@
     "\n",
     "checkpointer = ModelCheckpoint(filepath='output_models', verbose=1, save_best_only=True)\n",
     "\n",
-    "classifier.fit_generator(training_set,steps_per_epoch = 12500/32,\n",
-    "                         epochs = 15,\n",
+    "classifier.fit_generator(training_set,steps_per_epoch = 12500/25,\n",
+    "                         epochs = 30,\n",
     "                         validation_data = test_set,\n",
     "                         validation_steps = 30,\n",
     "                         callbacks =tensorboard)"
