added some metrics

--- a/subclass_experiment/Train.ipynb
+++ b/subclass_experiment/Train.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import packages \n",
@@ -254,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "classifier.save('./output_models/cnn_82_5.h5')"
@@ -263,7 +267,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -273,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "classifier = load_model('./output_models/cnn_867.h5')"
@@ -300,8 +308,7 @@
     "                                            class_mode = 'categorical')\n",
     "\n",
     "y_pred = classifier.predict_generator(final_test_set)\n",
-    "y_probabilities=classifier.predict_generator(final_test_set)\n",
-    "np.savetxt(\"custom_cnn_867.csv\", y_probabilities, delimiter=\",\")\n",
+    "np.savetxt(\"custom_cnn_867.csv\", y_pred, delimiter=\",\")\n",
     "y_pred = np.argmax(y_pred,axis = 1) \n",
     "y_actual = final_test_set.classes\n",
     "\n",
@@ -341,7 +348,8 @@
     "confusion_mtx = confusion_matrix(y_actual, y_pred) \n",
     "print(confusion_mtx)\n",
     "target_names = classnames\n",
-    "print(classification_report(y_actual, y_pred, target_names=target_names))"
+    "print(classification_report(y_actual, y_pred, target_names=target_names))\n",
+    "print(\"accuracy= \",(confusion_mtx.diagonal().sum()/confusion_mtx.sum())*100)"
    ]
   }
  ],
