made predictions dataframe

--- a/subclass_experiment/Train.ipynb
+++ b/subclass_experiment/Train.ipynb
@@ -190,7 +190,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -227,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -269,10 +271,13 @@
     "                                            class_mode = 'categorical')\n",
     "\n",
     "y_pred = classifier.predict_generator(final_test_set)\n",
-    "np.savetxt(\"custom_cnn_867.csv\", y_pred, delimiter=\",\")\n",
+    "df=pd.DataFrame(y_pred,columns=['c0','c1','c2','c3','c4'])\n",
     "y_pred = np.argmax(y_pred,axis = 1) \n",
     "y_actual = final_test_set.classes\n",
-    "\n",
+    "df[\"filenames\"]=final_test_set.filenames\n",
+    "df[\"actual\"]=y_actual\n",
+    "df[\"predicted\"]=y_pred\n",
+    "df.to_csv(\"./output_models/predictions_custom_cnn_867.csv\")\n",
     "classnames=[]\n",
     "for classname in final_test_set.class_indices:\n",
     "    classnames.append(classname)\n"
@@ -280,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -313,15 +318,6 @@
     "print(classification_report(y_actual, y_pred, target_names=target_names))\n",
     "print(\"accuracy= \",(confusion_mtx.diagonal().sum()/confusion_mtx.sum())*100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
